--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -74,3 +74,22 @@ nav a{
     margin-top: 5px;
     margin-bottom: 20px;
 }
+
+
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+}
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #fff8f3;
+    margin: 130px 0;
+}
