--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -75,6 +75,12 @@ nav a{
     margin-bottom: 20px;
 }
 
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+
 
 .section-title{
     color: #181818;
@@ -92,4 +98,11 @@ nav a{
     border-radius: 10px;
     background: #fff8f3;
     margin: 130px 0;
+}
+.about-info-conteiner{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
