--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -109,3 +109,28 @@ main{
 #what-i-do-description{
     padding: 30px 150px;
 }
+#what-i-do-description{
+    padding: 30px 150px;
+}
+
+.skills-conteiner{
+    display: flex;
+    gap: 24px;
+}
+
+.skills{
+    padding: 30px;
+    border-radius: 5px;
+    background: #fff;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skills-description{
+
+}
+
+.resume-coloum-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
