--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -134,3 +134,35 @@ main{
     font-size: 30px;
     font-weight: 700;
 }
+.skills-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.resume-container{
+    display: flex;
+    gap: 50px;
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.resume-item-institute{
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+
+.resume-item-institute, .resume-itrem-discription{
+    color: #757575;
+}
+.resume-container hr{
+    margin: 30px 30px 30px 0px;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+}
