--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -125,9 +125,6 @@ main{
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
 
-.skills-description{
-
-}
 
 .resume-coloum-title{
     color: #474747;
@@ -165,4 +162,10 @@ main{
 .download-cv{
     text-align: center;
     margin-top: 50px;
+}
+footer{
+    display: flex;
+    background: #FD6e0a;
+    margin-top: 100px;
+    padding: 130px 200px;
 }
